add gis workbench tools, fleet management features and 2,5D buildings
